added prior research project

--- a/experience.html
+++ b/experience.html
@@ -55,7 +55,7 @@
 										<h2 style="font-size:22px !important;">Lockheed Martin: <br/> Space Systems</h2>
 										<h4><strong><i>Machine Learning and Computer Vision Intern (June - August 2020)</i></strong></h4>
                                         <p>
-                                            Incoming intern at Lockheed Martin Space Systems, interfacing with flight hardware and solar array.
+                                            Incoming intern at Lockheed Martin Space Systems, interacting with space-based hardware.
                                         </p>
                                     </div>
 								</section>
