--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,8 @@
                                 <section class="spotlight" style='background-color: #ffffff;'>
                                     <div class="image"><img src="images/projects/storefront.png" alt="" /></div><div class="content">
                                         <h2>StoreFront</h2>
-                                        <p>StoreFront is an digital platform that provides small businesses with the opportunity to easily create an online presence in their local communities, 
+                                        <p>
+											StoreFront is an digital platform that provides small businesses with the opportunity to easily create an online presence in their local communities, 
                                             and continue selling products to customers in order to stay afloat during the COVID-19 pandemic.
 
                                             This project was submitted to the COVID-19 Design Challenge, hosted by the Jacobs Institute of Design Innovation at UC Berkeley.
@@ -80,9 +81,26 @@
                                     </div>
                                 </section>
 
+								<br/>
+                                <br/>
+
+                                <hr/>
+
                                 <br/>
                                 <br/>
 
+                                <section class="spotlight" style='background-color: #ffffff;'>
+                                    <div class="image"><img src="images/projects/airfoil.png" alt="" /></div><div class="content">
+                                        <h2>Maximizing Aerodynamic Efficiency Through Dynamically Changing Airfoil Cambers</h2>
+                                        <p>
+											I designed and 3D printed various airfoil models with varied cambers on Autodesk Inventor 2018, and then analyzed the aerodynamic efficiency at different angles of attack
+											for each airfoil through Autodesk Computational Fluid Dynamics (CFD) simulations. Overall, this project was created to propose the idea that dynamically modifying an airfoil's camber based on the current
+											angle of attack leads to increased aerodyamic efficiency.
+                                        </p>
+
+                                        <a href="https://drive.google.com/drive/folders/1IBjIuog_ijPH_bISKW3FV9qVxMVBB8H-?usp=sharing" target="_blank" class="button primary fit icon brands fa-google-drive">Display Board and Abstract</a>
+                                    </div>
+                                </section>
 							</div>
 						</section>
 					</article>
