updated profile images, internship info, minor font color edits, resume link

--- a/experience.html
+++ b/experience.html
@@ -55,7 +55,9 @@
 										<h2 style="font-size:22px !important;">Lockheed Martin: <br/> Space Systems</h2>
 										<h4><strong><i>Machine Learning and Computer Vision Intern (June - August 2020)</i></strong></h4>
                                         <p>
-                                            Incoming intern at Lockheed Martin Space Systems, interacting with space-based hardware.
+											Created a vision system using deep learning and computer vision to identify and label defects found within essential space-based hardware. 
+											Helped set up a new machine to automatically retrain/evaluate the model using GPU-accelerated ML with CUDA on an Nvidia DGX server. 
+											Trained the model up to 98% accuracy on collected data, and significantly increased model inference speed which reduced the company's defect detection time by 95%.
                                         </p>
                                     </div>
 								</section>
@@ -93,7 +95,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
+							<li><a href="https://drive.google.com/file/d/1QPLTt7Vkk2c4rJzmemgkN09-NOl5__AM/view?usp=sharing" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
 							<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github fa-lg"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin fa-lg"><span class="label">LinkedIn</span></a></li>
 							<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope fa-lg"><span class="label">Email</span></a></li>
