--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<span class="image left"><img src="images/profilepics/pfp3.jpg" alt="" /></span>
+								<span class="image left"><img src="images/profilepics/pfp4.jpg" alt="" /></span>
 									
 
 								<h3>Ashwat Chidambaram</h3>
@@ -141,7 +141,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
+							<li><a href="https://drive.google.com/file/d/1QPLTt7Vkk2c4rJzmemgkN09-NOl5__AM/view?usp=sharing" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
 							<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github fa-lg"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin fa-lg"><span class="label">LinkedIn</span></a></li>
 							<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope fa-lg"><span class="label">Email</span></a></li>
