--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Hi, I'm Ashwat!</h2>
-							<p>avid computer scientist<br />
-							aviation enthusiast<br />
-							UC Berkeley, EECS</p>
+							<p>Avid Computer Scientist<br/>
+							Aviation Enthusiast<br/>
+							UC Berkeley EECS</p>
 							<ul class="icons">
-								<li><a href="#" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
+								<li><a href="https://drive.google.com/file/d/1QPLTt7Vkk2c4rJzmemgkN09-NOl5__AM/view?usp=sharing" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
 								<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github fa-lg"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin fa-lg"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope fa-lg"><span class="label">Email</span></a></li>
@@ -63,7 +63,7 @@
 							<header class="major">
 								<!-- <h2>Arcu aliquet vel lobortis ata nisl<br />
 								eget augue amet aliquet nisl cep donec</h2> -->
-								<h2 style="color:#003262">In case we haven't met before...</h2>
+								<h2 style="color:#ffffff">In case we haven't met before...</h2>
 								<p>Welcome! My name is Ashwat Chidambaram, and I am currently a second-year<br/>
 								at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS).<br/>
 								I am extremeley passionate about the fields of computer science and engineering,<br/>
@@ -82,7 +82,7 @@
 						<section class="spotlight">
 							<div class="image"><a href="projects.html"><img src="images/projects/sms.png" alt="" /></a></div><div class="content">
 								<h2><a href="projects.html">Personal Projects</a></h2>
-								<p>I love working on personal projects in my freetime, both individually and in a group with my friends. 
+								<p>I love working on personal projects in my freetime, both individually and in groups with my friends. 
 									Click here to see some of my (and our) latest creations, as well as links to our projects and codebase behind it all.</p>
 							</div>
 						</section>
@@ -94,7 +94,7 @@
 							</div>
 						</section>
 						<section class="spotlight">  
-							<div class="image"><a href="about.html"><img src="images/profilepics/pfp3.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="about.html"><img src="images/profilepics/pfp4.jpg" alt="" /></a></div><div class="content">
 								<h2><a href="about.html">About Me</a></h2>
 								<p>A solo-certified student pilot, and Eagle Scout with Three Golden Palms. A hobbyist drummer since the age of 8,
 									with a love for the intricate craft of origami. A budding electrical engineer and computer scientist, interested in
@@ -132,7 +132,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
+							<li><a href="https://drive.google.com/file/d/1QPLTt7Vkk2c4rJzmemgkN09-NOl5__AM/view?usp=sharing" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
 							<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github fa-lg"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin fa-lg"><span class="label">LinkedIn</span></a></li>
 							<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope fa-lg"><span class="label">Email</span></a></li>
