edited logo image size

--- a/experience.html
+++ b/experience.html
@@ -80,7 +80,7 @@
                                 <hr/>
 
 								<section class="spotlight" style='background-color: #ffffff;'>
-                                    <div class="image"><img src="images/organizations/lm.jpg" alt="" /></div><div class="content">
+                                    <div class="image"><img src="images/organizations/lm.jpg" height="440" alt="" /></div><div class="content">
 										<h2 style="font-size:23px !important;">Lockheed Martin: <br/> Enterprise Business Services</h2>
 										<h4><strong><i>Software Engineering Intern <br/> (June - August 2019)</i></strong></h4>
                                         <p>
