--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 								<h2>Organizations</h2>
 								<p>Being a key part of something bigger than myself has always been one of the important things in my life. Here are a few organizations I am extremely fortunate to be a part of 
 									during my time at UC Berkeley, due to the amazing experiences I have in them and the truly phenomenal people I get to meet along the way.</p>
-									
+							
 								<h3>Berkeley Model United Nations (BMUN)</h3>
 								<section class="spotlight" style='background-color: #ffffff;'></section>
 								<section class="spotlight" style='background-color: #ffffff;'>
@@ -80,6 +80,23 @@
 										</p>
 
 										<a href="http://www.bmun.org/" target="_blank" class="button primary fit icon solid fa-globe-americas">BMUN Website</a>
+									</div>
+								</section>
+
+								<br/>
+								<br/>
+
+								<h3>Machine Learning at Berkeley (ML@B)</h3>
+								<!-- <section class="spotlight" style='background-color: #ffffff;'></section> -->
+								<section class="spotlight" style='background-color: #ffffff;'>
+									<div class="image"><img src="images/organizations/mlab.png" style="width:500px; height:500px" alt="" /></div><div class="content">
+										<p>
+											Machine Learning at Berkeley (ML@B) is a student-run organization based at the UC Berkeley dedicated to building and fostering a vibrant machine learning community on campus while contributing to the greater ML community beyond. 
+											We are an impassioned community of undergraduate and graduate students working on industry consulting projects, cutting-edge academic research, and educational initiatives to make machine learning more accessible to everyone.
+											My role in ML@B is currently as a part of the New Member Education Program (NMEP).
+										</p>
+
+										<a href="https://ml.berkeley.edu/" target="_blank" class="button primary fit icon solid fa-laptop-code">ML@B Website</a>
 									</div>
 								</section>
 
