added video gesture project, updated mlab officer

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 										<p>
 											Machine Learning at Berkeley (ML@B) is a student-run organization based at the UC Berkeley dedicated to building and fostering a vibrant machine learning community on campus while contributing to the greater ML community beyond. 
 											We are an impassioned community of undergraduate and graduate students working on industry consulting projects, cutting-edge academic research, and educational initiatives to make machine learning more accessible to everyone.
-											My role in ML@B is currently as a part of the New Member Education Program (NMEP).
+											My role is currently as an officer of External Relations at ML@B.
 										</p>
 
 										<a href="https://ml.berkeley.edu/" target="_blank" class="button primary fit icon solid fa-laptop-code">ML@B Website</a>
