--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,27 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
+								<section class="spotlight" style='background-color: #ffffff;'>
+                                    <div class="image"><img src="images/projects/video_gesture_overlay.jpg" alt="" /></div><div class="content">
+                                        <h2>Video Gesture Overlay</h2>
+                                        <p>
+											Video Gesture Overlay is a machine learning and computer vision based application that is able to recognize hand gestures (as well as facial tracking), and subsequently display corresponding reacts/icons overlaid on the user’s camera feed.
+											This allows the user to convey a quick message without having to unmute themselves when video conferencing, and also adds an element of privacy by automatically hiding video stream when the user steps out of frame. This was featured 
+											on the official Weights & Biases YouTube channel where I presented our project, which you can watch <a href="https://www.youtube.com/watch?v=WxVq0wJKh8o" target="_blank">here</a>.
+                                        </p>
+
+                                        <a href="https://github.com/ashwatc/Video_Gesture_Overlay" target="_blank" class="button primary fit icon brands fa-github">GitHub Repository</a>
+                                    </div>
+                                </section>
+
+                                <br/>
+                                <br/>
+
+                                <hr/>
+
+                                <br/>
+                                <br/>
+
                                 <section class="spotlight" style='background-color: #ffffff;'>
                                     <div class="image"><img src="images/projects/sms.png" alt="" /></div><div class="content">
                                         <h2>Speech Matrix Solver</h2>
