--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><a href="projects.html"><img src="images/projects/sms.png" alt="" /></a></div><div class="content">
+							<div class="image"><a href="projects.html"><img src="images/projects/video_gesture_overlay.jpg" alt="" /></a></div><div class="content">
 								<h2><a href="projects.html">Personal Projects</a></h2>
 								<p>I love working on personal projects in my freetime, both individually and in groups with my friends. 
 									Click here to see some of my (and our) latest creations, as well as links to our projects and codebase behind it all.</p>
