updating new internships and experiences

--- a/experience.html
+++ b/experience.html
@@ -41,7 +41,7 @@
 					<article id="main">
 						<header>
 							<h2>Work Experience</h2>
-							<p>“Choose a job you love, and you will <br/> 
+							<p>“Choose a job you love, and you will <br/>
 								never have to work a day in your life." <br/> 
 								~ Confucius</p>
 						</header>
@@ -52,13 +52,55 @@
 								<section class="spotlight" style='background-color: #ffffff;'></section>
 								
 								<section class="spotlight" style='background-color: #ffffff;'>
+                                    <div class="image"><img src="images/organizations/nvidia.jpeg" alt="" /></div><div class="content">
+										<h2 style="font-size:23px !important;">NVIDIA Self-Driving (Autonomous Vehicles)</h2>
+										<h4><strong><i>Machine Learning Perception Intern<br/> (May 2022 - August 2022)</i></strong></h4>
+                                        <p>
+											Worked on improving NVIDIA's next-generation self-driving perception algorithms by bridging the gap 
+											between driving simulation and the real world. Implemented sim2real transfer using a zero-shot learning 
+											approach that was adopted, modified, and implemented based on a SOTA research paper. Improved classification 
+											accuracy on select image classes by an average of ~10 to 15%.
+                                        </p>
+                                    </div>
+								</section>
+
+								<hr/>
+								
+								<section class="spotlight" style='background-color: #ffffff;'>
+                                    <div class="image"><img src="images/organizations/alexa.png" alt="" /></div><div class="content">
+										<h2 style="font-size:23px !important;">Amazon Devices (Alexa)</h2>
+										<h4><strong><i>Software Development Intern<br/> (May 2021 - August 2021)</i></strong></h4>
+                                        <p>
+											Worked on adding functionality to the backend system for a confidential unreleased project within Amazon Devices (Alexa) in Seattle, WA.
+                                        </p>
+                                    </div>
+								</section>
+
+								<hr/>
+
+								<section class="spotlight" style='background-color: #ffffff;'>
+                                    <div class="image"><img src="images/organizations/fakenet.jpg" alt="" /></div><div class="content">
+										<h2 style="font-size:23px !important;">FakeNetAI (startup)</h2>
+										<h4><strong><i>Machine Learning Consultant (ML@B) <br/> (January 2021 - May 2021)</i></strong></h4>
+                                        <p>
+											Industry project partnered between Machine Learning @ Berkeley and Berkeley SkyDeck startup FakeNetAI.
+											Worked with a team of four students to help develop and tune various ML audio model architectures, to distinguish between genuine vs. synthesized audio data in deepfakes.
+											Assisted in deploying the model onto a website to run inference on user audio input. The codebase was created with PyTorch in Python and trained with AWS.
+                                        </p>
+                                    </div>
+								</section>
+
+								<hr/>
+
+								<section class="spotlight" style='background-color: #ffffff;'>
                                     <div class="image"><img src="images/organizations/dewaste.png" alt="" /></div><div class="content">
 										<h2 style="font-size:23px !important;">DeWaste (startup)</h2>
-										<h4><strong><i>Computer Vision Intern <br/> (August 2020 - present)</i></strong></h4>
+										<h4><strong><i>Computer Vision Intern <br/> (August 2020 - December 2020)</i></strong></h4>
                                         <p>
-											DeWaste Excess utilizes cutting edge technology that collects real time data of food leftovers using computer vision. 
-											This data is then used to generate daily reports and actionable insights which can be used to reduce food waste by 
-											engineering the menu to adapt to customer preferences. My internship is currently a work in progress this Fall semester!
+											DeWaste utilizes cutting edge technology that collects real time data of food leftovers using computer vision. 
+											This data is then used to generate daily reports and actionable insights which can be used to reduce food waste by engineering the menu to adapt to customer preferences. 
+											I researched into deep learning models to classify food waste across various categories, performed preprocessing and analysis of data within public food waste datasets, 
+											and created documentation for future interns at DeWaste to continue diving into.
                                         </p>
                                     </div>
 								</section>
