--- a/index.html
+++ b/index.html
@@ -64,15 +64,18 @@
 								<!-- <h2>Arcu aliquet vel lobortis ata nisl<br />
 								eget augue amet aliquet nisl cep donec</h2> -->
 								<h2 style="color:#ffffff">In case we haven't met before...</h2>
-								<p>Welcome! My name is Ashwat Chidambaram, and I am currently a second-year<br/>
+								<p>Welcome! My name is Ashwat Chidambaram, and I am currently a 4th-year undergrad<br/>
 								at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS).<br/>
 								I am extremeley passionate about the fields of computer science and engineering,<br/>
 								and deeply interested in the applications of robotics and autonomous systems.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon solid fa-microchip major style1" style="color:red"><span class="label">Lorem</span></span></li>
-								<li><span class="icon solid fa-plane-departure major style2" style="color:green"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3" style="color:blue"><span class="label">Dolor</span></span></li>
+								<li><span class="icon solid fa-microchip major style1"><span class="label">Lorem</span></span></li>
+								<li><span class="icon solid fa-plane-departure major style2"><span class="label">Ipsum</span></span></li>
+								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<!-- <li><span class="icon solid fa-microchip major style1" style="color:#ffffff""><span class="label">Lorem</span></span></li>
+								<li><span class="icon solid fa-plane-departure major style2" style="color:#ffffff""><span class="label">Ipsum</span></span></li>
+								<li><span class="icon solid fa-code major style3" style="color:#ffffff""><span class="label">Dolor</span></span></li> -->
 							</ul>
 						</div>
 					</section>
@@ -87,14 +90,14 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><a href="experience.html"><img src="images/organizations/lm.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="experience.html"><img src="images/organizations/nvidia.jpeg" alt="" /></a></div><div class="content">
 								<h2><a href="experience.html">Work Experience</a></h2>
 								<p>Nothing is better than being given the chance to apply all your skills to contribute towards something big. 
 									Here are some of the tasks and projects that I worked on during my past internship experiences.</p>
 							</div>
 						</section>
 						<section class="spotlight">  
-							<div class="image"><a href="about.html"><img src="images/profilepics/pfp4.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="about.html"><img src="images/profilepics/pfphalfmoonbay.jpeg" alt="" /></a></div><div class="content">
 								<h2><a href="about.html">About Me</a></h2>
 								<p>A solo-certified student pilot, and Eagle Scout with Three Golden Palms. A hobbyist drummer since the age of 8,
 									with a love for the intricate craft of origami. A budding electrical engineer and computer scientist, interested in
