--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<span class="image left"><img src="images/profilepics/pfp4.jpg" alt="" /></span>
+								<span class="image left"><img src="images/profilepics/pfphalfmoonbay.jpeg" alt="" /></span>
 									
 
 								<h3>Ashwat Chidambaram</h3>
@@ -76,7 +76,7 @@
 										<p>
 											The oldest Model UN conference in the world, BMUN was founded in 1952 by a small group of students at UC Berkeley. For the better part of a century, BMUN has upheld their legacy through thick and thin. 
 											Today, the BMUN secretariat continues to orchestrate one of the largest Model United Nations conferences in the world, bolstered by our educational mission and outreach initiatives.
-											My role in BMUN is as a Vice-Chair leading crisis-related committees, as well as serving as the Deputy of Merchandise for the Publications Staff.
+											My roles in BMUN include serving as Vice-Chair leading crisis and general committees, serving as head chair for our Fall Conference, and being Deputy of Merchandise for the Publications Staff.
 										</p>
 
 										<a href="http://www.bmun.org/" target="_blank" class="button primary fit icon solid fa-globe-americas">BMUN Website</a>
@@ -93,7 +93,7 @@
 										<p>
 											Machine Learning at Berkeley (ML@B) is a student-run organization based at the UC Berkeley dedicated to building and fostering a vibrant machine learning community on campus while contributing to the greater ML community beyond. 
 											We are an impassioned community of undergraduate and graduate students working on industry consulting projects, cutting-edge academic research, and educational initiatives to make machine learning more accessible to everyone.
-											My role is currently as an officer of External Relations at ML@B.
+											My roles in ML@B include being an officer of External Relations, serving as an industry project member, and leading a team as an industry project manager.
 										</p>
 
 										<a href="https://ml.berkeley.edu/" target="_blank" class="button primary fit icon solid fa-laptop-code">ML@B Website</a>
