--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 										<p>
 											The oldest Model UN conference in the world, BMUN was founded in 1952 by a small group of students at UC Berkeley. For the better part of a century, BMUN has upheld their legacy through thick and thin. 
 											Today, the BMUN secretariat continues to orchestrate one of the largest Model United Nations conferences in the world, bolstered by our educational mission and outreach initiatives.
-											My roles in BMUN include serving as Vice-Chair leading crisis and general committees, serving as head chair for our Fall Conference, and being Deputy of Merchandise for the Publications Staff.
+											My roles in BMUN include serving as Vice Chair (x4) leading crisis and general committees, serving as Head Chair (x2) for our Fall Conference leading a novel committee on AI ethics and safety, Deputy of Merchandise in Publications Staff, and Founding Member/Director of Data Analytics in External Staff.
 										</p>
 
 										<a href="http://www.bmun.org/" target="_blank" class="button primary fit icon solid fa-globe-americas">BMUN Website</a>
@@ -93,7 +93,7 @@
 										<p>
 											Machine Learning at Berkeley (ML@B) is a student-run organization based at the UC Berkeley dedicated to building and fostering a vibrant machine learning community on campus while contributing to the greater ML community beyond. 
 											We are an impassioned community of undergraduate and graduate students working on industry consulting projects, cutting-edge academic research, and educational initiatives to make machine learning more accessible to everyone.
-											My roles in ML@B include being an officer of External Relations, serving as an industry project member, and leading a team as an industry project manager.
+											My roles in ML@B include being an officer of External & Internal Relations, serving as an industry project member, and leading educational initiatives through workshops and personal 1:1 mentorship to help students break into the field of ML.
 										</p>
 
 										<a href="https://ml.berkeley.edu/" target="_blank" class="button primary fit icon solid fa-laptop-code">ML@B Website</a>
@@ -107,8 +107,8 @@
 							<div class="inner">
 								<header class="major">
 									<h2 style="color:#FDB515">My Passions</h2>
-									<p>As much as I love coding and creating, my passions extend farther than the eye can see.<br/>
-									Here are a few things I take pride in and enjoy doing in my freetime.</p>
+									<p>As much as I love building and innovating, my passions extend farther than the eye can see.<br/>
+									Here are a few things that I take pride in and enjoy doing in my freetime.</p>
 								</header>
 								<!-- flying, drumming, basketball, origami, boy scouts, mun -->
 								<ul class="features">
@@ -120,13 +120,13 @@
 									</li>
 									<li class="icon solid fa-drum">
 										<h3>Drumming</h3>
-										<p>From the moment I entered my first drum lesson in 2nd grade, I knew I was getting into a whole lot of fun. Drumming has become one of my favorite lifetime hobbies, and I've performed percussion/drum set in Jazz Bands, Symphonic Bands, and Wind Ensembles for about 10 years.
+										<p>From the moment I took my first drum lesson in 2nd grade, I knew I was getting into something I'd truly enjoy. Drumming has become one of my favorite lifetime hobbies, and I've performed percussion/drum set in Jazz Bands, Symphonic Bands, and Wind Ensembles for about 10 years.
 											Nowadays you can find me casually jamming out on an electronic drum kit back at home, recording drum covers to the latest pop songs which catch my attention on the radio.
 										</p>
 									</li>
 									<li class="icon solid fa-basketball-ball">
 										<h3>Basketball</h3>
-										<p>Basketball has become a classic sport that I began playing with my friends since we were tiny 5th graders, and it never gets old to this day as college students. Besides playing recreationally,
+										<p>Basketball has become a classic sport that I began playing with my friends since we were little 5th graders, and it never gets old to this day even as college students. Besides playing recreationally,
 											I also play Intramural Basketball at Cal representing the Berkeley Model United Nations (BMUN) club, and we had a near-perfect season this past semester (until it was unfortunately cut short due to the pandemic).
 										</p>
 									</li>
@@ -140,14 +140,14 @@
 										<h3>United Nations</h3>
 										<p>Learning about global issues and international affairs has always been of great interest to me, ever since I started competing in Model United Nations in high school.
 											It allows me to represent different countries, research their history and resources, and learn about how to compromise and work together with other nations while putting our differences aside.
-											I also love to get directly involved, and have previously served as a Delegate at the United Nations Youth Assembly, flying over and attending a conference at the United Nations Headquarters in New York.
+											I'm also passionate about getting directly involved, and have previously served as a Delegate at the United Nations Youth Assembly, flying over and attending a conference at the United Nations Headquarters in New York.
 										</p>
 									</li>
 									<li class="icon solid fa-flag-usa">
 										<h3>Boy Scouts of America</h3>
-										<p>From the bottom of my heart, I can truly say that nothing has changed my mindset, personality, and character as much as the Boy Scouts of America. The ideals of teamwork, leadership, and responsibility have been 
-											deeply instilled within me during my 8 years as a Scout. I earned my Eagle Scout rank along with the Bronze, Gold, and Silver Eagle Palms, was inducted into the Order of the Arrow (Boy Scout's Honor Society), and served in over six different
-											leadership roles in my Troop. Once a Scout, always a Scout.
+										<p>From the bottom of my heart, I can genuinely say that nothing has shaped my mindset, personality, and character as much as the Boy Scouts of America. The ideals of teamwork, leadership, and responsibility have been 
+											deeply instilled within me during my 8 years as a Scout. I earned my Eagle Scout rank along with my Bronze, Gold, and Silver Eagle Palms, was inducted into the Order of the Arrow (Boy Scout's Honor Society), and served in over six different
+											leadership roles in my Troop. As the popular saying goes: once a Scout, always a Scout.
 										</p>
 									</li>
 								</ul>
