--- a/experience.html
+++ b/experience.html
@@ -56,10 +56,15 @@
 										<h2 style="font-size:23px !important;">NVIDIA Self-Driving (Autonomous Vehicles)</h2>
 										<h4><strong><i>Machine Learning Perception Intern<br/> (May 2022 - August 2022)</i></strong></h4>
                                         <p>
-											Worked on improving NVIDIA's next-generation self-driving perception algorithms by bridging the gap 
+											<!-- Worked on improving NVIDIA's next-generation self-driving perception algorithms by bridging the gap 
 											between driving simulation and the real world. Implemented sim2real transfer using a zero-shot learning 
 											approach that was adopted, modified, and implemented based on a SOTA research paper. Improved classification 
-											accuracy on select image classes by an average of ~10 to 15%.
+											accuracy on select image classes by an average of ~10 to 15%. -->
+											Worked on improving classification performance for NVIDIA’s traffic sign models throughout the European Union, 
+											by converting simulation data to real-world data using zero reference images. Developed a custom zero-shot sim2real 
+											computer vision model using TensorFlow, OpenCV, and Python, by modifying and implementing various research papers.
+											Improved classification accuracy on low-data image classes by average of ~10-15%, using my model to do sim2real 
+											image conversion which was used to boost performance on NVIDIA's next-generation core perception models.
                                         </p>
                                     </div>
 								</section>
@@ -71,7 +76,8 @@
 										<h2 style="font-size:23px !important;">Amazon Devices (Alexa)</h2>
 										<h4><strong><i>Software Development Intern<br/> (May 2021 - August 2021)</i></strong></h4>
                                         <p>
-											Worked on adding functionality to the backend system for a confidential unreleased project within Amazon Devices (Alexa) in Seattle, WA.
+											Developed backend software for a confidential and unreleased feature of Amazon Alexa. 
+											Worked primarily with Java, interfacing with various services such as AWS Lambda and Amazon DynamoDB.
                                         </p>
                                     </div>
 								</section>
@@ -83,9 +89,12 @@
 										<h2 style="font-size:23px !important;">FakeNetAI (startup)</h2>
 										<h4><strong><i>Machine Learning Consultant (ML@B) <br/> (January 2021 - May 2021)</i></strong></h4>
                                         <p>
-											Industry project partnered between Machine Learning @ Berkeley and Berkeley SkyDeck startup FakeNetAI.
-											Worked with a team of four students to help develop and tune various ML audio model architectures, to distinguish between genuine vs. synthesized audio data in deepfakes.
-											Assisted in deploying the model onto a website to run inference on user audio input. The codebase was created with PyTorch in Python and trained with AWS.
+											<!-- Industry project partnered between Machine Learning @ Berkeley and Berkeley SkyDeck startup FakeNetAI.
+											Worked with a team of four students to develop and tune various ML models to distinguish between genuine vs. synthesized audio data found in deepfakes.
+											Assisted in deploying the model onto a website to run inference on user audio input. The codebase was created with PyTorch in Python and trained with AWS. -->
+											FakeNetAI is a Berkeley SkyDeck startup that aims to detect synthetic media and deepfakes, in order to protect users from the dangers of these attacks through state-of-the-art fake video detection products. 
+											My role was the following: Developed and tuned various ML model architectures to distinguish between genuine vs. synthesized audio data found in deepfakes. Worked in a team of four students (through Machine Learning @ Berkeley),
+											using PyTorch and Python to train models through Amazon EC2. Deployed the model onto a custom website to run inference on user audio input files.
                                         </p>
                                     </div>
 								</section>
