--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<h2 style="color:#ffffff">In case we haven't met before...</h2>
 								<p>Welcome! My name is Ashwat Chidambaram, and I am currently a 4th-year undergrad<br/>
 								at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS).<br/>
-								I am extremeley passionate about the fields of computer science and engineering,<br/>
+								I am extremely passionate about the fields of computer science and engineering,<br/>
 								and deeply interested in the applications of robotics and autonomous systems.</p>
 							</header>
 							<ul class="icons major">
@@ -86,7 +86,7 @@
 							<div class="image"><a href="projects.html"><img src="images/projects/video_gesture_overlay.jpg" alt="" /></a></div><div class="content">
 								<h2><a href="projects.html">Personal Projects</a></h2>
 								<p>I love working on personal projects in my freetime, both individually and in groups with my friends. 
-									Click here to see some of my (and our) latest creations, as well as links to our projects and codebase behind it all.</p>
+									Click here to see some of our latest creations, as well as links to our projects and the codebase behind it all.</p>
 							</div>
 						</section>
 						<section class="spotlight">
