--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><a href="projects.html"><img src="images/projects/video_gesture_overlay.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="projects.html"><img src="images/projects/airfoil.png" alt="" /></a></div><div class="content">
 								<h2><a href="projects.html">Personal Projects</a></h2>
 								<p>I love working on personal projects in my freetime, both individually and in groups with my friends. 
 									Click here to see some of our latest creations, as well as links to our projects and the codebase behind it all.</p>
