--- a/projects.html
+++ b/projects.html
@@ -45,8 +45,26 @@
                                 Innovation is doing new things.” <br/>
                                 ~ Theodore Levitt</p>
 						</header>
+
 						<section class="wrapper style5">
 							<div class="inner">
+								<section class="spotlight" style='background-color: #ffffff;'>
+                                    <div class="image"><img src="images/projects/rescue.png" alt="" /></div><div class="content">
+                                        <h2>Search and Rescue</h2>
+                                        <p>
+											The primary goal of this project is to create a functional multi-robot system that locates and navigates towards a target object, thus simulating the process of “Search and Rescue”. 
+											This was accomplished by using a Baxter robotic arm and mobile TurtleBot in parallel, where the Baxter arm actively searches and guides the TurtleBot towards the target object, 
+											and the TurtleBot thereafter “rescues” the object by autonomously navigating the last-mile by itself. This was submitted as our final project for EECS 106A (Introduction to Robotics) at UC Berkeley.
+                                        </p>
+
+                                        <a href="https://sites.google.com/berkeley.edu/searchandrescue/introduction?authuser=0" target="_blank" class="button primary fit icon solid fa-laptop-code">Project Website</a>
+                                    </div>
+                                </section>
+
+								<!-- <br/> -->
+								<hr/>
+								<!-- <br/> -->
+
 								<section class="spotlight" style='background-color: #ffffff;'>
                                     <div class="image"><img src="images/projects/video_gesture_overlay.jpg" alt="" /></div><div class="content">
                                         <h2>Video Gesture Overlay</h2>
@@ -60,13 +78,9 @@
                                     </div>
                                 </section>
 
-                                <br/>
-                                <br/>
-
+                                <!-- <br/> -->
                                 <hr/>
-
-                                <br/>
-                                <br/>
+                                <!-- <br/> -->
 
                                 <section class="spotlight" style='background-color: #ffffff;'>
                                     <div class="image"><img src="images/projects/sms.png" alt="" /></div><div class="content">
@@ -80,13 +94,9 @@
                                     </div>
                                 </section>
 
-                                <br/>
-                                <br/>
-
+                                <!-- <br/> -->
                                 <hr/>
-
-                                <br/>
-                                <br/>
+                                <!-- <br/> -->
 
                                 <section class="spotlight" style='background-color: #ffffff;'>
                                     <div class="image"><img src="images/projects/storefront.png" alt="" /></div><div class="content">
@@ -102,13 +112,9 @@
                                     </div>
                                 </section>
 
-								<br/>
-                                <br/>
-
+								<!-- <br/> -->
                                 <hr/>
-
-                                <br/>
-                                <br/>
+                                <!-- <br/> -->
 
                                 <section class="spotlight" style='background-color: #ffffff;'>
                                     <div class="image"><img src="images/projects/airfoil.png" alt="" /></div><div class="content">
