--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,24 @@
 						<section class="wrapper style5">
 							<div class="inner">
 								<section class="spotlight" style='background-color: #ffffff;'>
+                                    <div class="image"><img src="images/projects/tri_ashwat.png" alt="" /></div><div class="content">
+                                        <h2>CS 194-26 Projects: Computer Vision and Computational Photography</h2>
+                                        <p>
+											During my Fall 2022 semester, I took CS 194-26: Intro to Computer Vision and Computational Photography at UC Berkeley. 
+											In this class, I worked on a plethora of interesting projects and published detailed websites for each of them, accompanied by descriptions 
+											of my thought process and work. Feel free to check out the links below to learn more!
+
+                                        </p>
+
+                                        <a href="https://docs.google.com/document/d/1IYR9BZiq-IWD0X1g6owf5X00e7nR103uIxO-3kiGTiU/edit?usp=sharing" target="_blank" class="button primary fit icon solid fa-laptop-code">Link to Project Websites</a>
+                                    </div>
+                                </section>
+
+								<!-- <br/> -->
+								<hr/>
+								<!-- <br/> -->
+
+								<section class="spotlight" style='background-color: #ffffff;'>
                                     <div class="image"><img src="images/projects/rescue.png" alt="" /></div><div class="content">
                                         <h2>Search and Rescue</h2>
                                         <p>
