--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><a href="projects.html"><img src="images/projects/airfoil.png" alt="" /></a></div><div class="content">
+							<div class="image"><a href="projects.html"><img src="images/projects/tri_ashwat.png" alt="" /></a></div><div class="content">
 								<h2><a href="projects.html">Personal Projects</a></h2>
 								<p>I love working on personal projects in my freetime, both individually and in groups with my friends. 
-									Click here to see some of our latest creations, as well as links to our projects and the codebase behind it all.</p>
+									Click here to see some of my latest creations, as well as links to each of the projects and codebase behind it all.</p>
 							</div>
 						</section>
 						<section class="spotlight">
