--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 									
 
 								<h3>Ashwat Chidambaram</h3>
-								<p>Born and raised a California native, I'm currently a student at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS) as a <a href="https://financialaid.berkeley.edu/regents-and-chancellors-scholarship" target="_blank">Regents' and Chancellor's Scholar.</a>
+								<p>Born and raised a California native, I'm currently a Masters student at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS) as a <a href="https://financialaid.berkeley.edu/regents-and-chancellors-scholarship" target="_blank">Regents' and Chancellor's Scholar.</a>
 									I'm constantly exploring new ways to learn anything and everything I can, and how I can apply those skills to build cool and purposeful things to use.
 									I have a deep interest in pursuing a path which allows me to combine my passions for both software and hardware together, particularly delving into the field of autonomous systems 
 									in order to build safe, reliable, and innovative robotics in the future which will empower humanity. In addition, I have a lot of interests far beyond the field of tech, which you can read about below!
