--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
 								<!-- <h2>Arcu aliquet vel lobortis ata nisl<br />
 								eget augue amet aliquet nisl cep donec</h2> -->
 								<h2 style="color:#ffffff">In case we haven't met before...</h2>
-								<p>Welcome! My name is Ashwat Chidambaram, and I am currently a 4th-year undergrad<br/>
-								at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS).<br/>
+								<p>Welcome! My name is Ashwat Chidambaram, and I am currently a 5th-year Masters <br/>
+								student at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS),<br/>
+								specializing in Computer Vision, Machine Learning, and Artificial Intelligence (CV/ML/AI).<br/>
 								I am extremely passionate about the fields of computer science and engineering,<br/>
-								and deeply interested in the applications of robotics and autonomous systems.</p>
+								and deeply interested in the applications of vision for robotics and autonomous systems.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon solid fa-microchip major style1"><span class="label">Lorem</span></span></li>
